Fix SignIn Layout and add working Login In button to the home.

--- a/client/views/templates/home/template-public.html
+++ b/client/views/templates/home/template-public.html
@@ -1,10 +1,12 @@
 <template name="PublicHome">
     <h1>Fumble Mania.</h1>
-    <hr />
+    <hr>
+    <a href="{{pathFor route='sign-in'}}" class="ui button">Log in</a>
+    <hr>
     This project is an online role-playing games platform using Meteor and Semantic UI.
-<br />
-    <br />
-    The aim is to provide a way to play "old school" role-playing games without the need to meet all around a physical table.<br />
-    I know that there is already some softwares using remote videos conferences but here, we want to be able to play in an asynchrone way.<br />
+<br>
+    <br>
+    The aim is to provide a way to play "old school" role-playing games without the need to meet all around a physical table.<br>
+    I know that there is already some softwares using remote videos conferences but here, we want to be able to play in an asynchrone way.<br>
     Like this we are able to play when we have time, we are not constrained to be at defined time all togethers.
 </template>
