--- a/client/views/templates/sign-in/template.html
+++ b/client/views/templates/sign-in/template.html
@@ -1,3 +1,7 @@
 <template name="SignIn">
-  {{> atForm}}
+    <div id="sign-in" class="ui middle aligned center aligned grid">
+        <div class="column">
+        {{> atForm}}
+        </div>
+    </div>
 </template>
