Set basic home page up

--- a/client/views/layouts/single-page.html
+++ b/client/views/layouts/single-page.html
@@ -1,5 +1,3 @@
 <template name="SinglePageLayout">
-    <header>{{> yield "header"}}</header>
-    <main>{{> yield}}</main>
-    <footer>{{> yield "footer"}}</footer>
+    {{> yield}}
 </template>
