Remove all semantic UI and Less

--- a/client/views/templates/sign-in/template.html
+++ b/client/views/templates/sign-in/template.html
@@ -1,7 +1,5 @@
-<template name="SignIn">
-    <div id="sign-in" class="ui middle aligned center aligned grid">
-        <div class="column">
-        {{> atForm}}
-        </div>
+<template name="SignIn"><div id="SignIn">
+    <div class="column">
+        {{> atForm state='signIn'}}
     </div>
-</template>
+</div></template>
