Add css skeleton

--- a/client/views/templates/sign-up/template.html
+++ b/client/views/templates/sign-up/template.html
@@ -23,18 +23,10 @@
                     </label>
                     <input type="password" id="at-field-password_again" name="at-field-password_again" placeholder="Password (again)" autocapitalize="none" autocorrect="off">
                 </div>    
-                <button type="submit" class="at-btn submit" id="at-btn">
-                    Register Now!
+                <button type="submit" class="at-btn submit button button-primary" id="at-btn">
+                    Register Now
                 </button>
             </form>
-        </div>
-        <div class="at-terms-link at-wrap">
-            <p>
-                By clicking Register, you agree to our
-                <a href="privacy">Privacy Policy</a>
-                and
-                <a href="terms-of-use">Terms of Use</a>
-            </p>
         </div>
         <div class="at-signin-link">
             <p>
